--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -40,7 +40,7 @@ jobs:
         working-directory: ./terraform
         run: |
           terraform init
-          terraform apply -auto-approve
+          terraform destroy -auto-approve
         env:
           TF_VAR_region: ${{ secrets.TF_VAR_region }}
           TF_VAR_vpc_cidr: ${{ secrets.TF_VAR_vpc_cidr }}
