--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -8,7 +8,7 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: us-east-1
-  TERRAFORM_ACTION: destroy  # Change to 'apply' to deploy infrastructure
+  TERRAFORM_ACTION: apply  # Change to 'apply' to deploy infrastructure
   IMAGE_NAME: flaskapp
 
 jobs:
@@ -39,8 +39,9 @@ jobs:
         if: env.TERRAFORM_ACTION == 'apply'
         working-directory: ./terraform
         run: |
-          EC2_IP=$(terraform output -raw ec2_public_ip)
+          EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
           echo "EC2_IP=$EC2_IP" >> $GITHUB_ENV
+         
 
   # -------------------------
   # Stage 2: Create ECR repo if needed
