--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -7,8 +7,9 @@ on:
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_REGION: us-east-1
-  TERRAFORM_ACTION: destroy
+  TERRAFORM_ACTION: apply
   IMAGE_NAME: flaskapp
 
 jobs:
@@ -31,7 +32,7 @@ jobs:
         working-directory: ./terraform
         run: terraform init
 
-      - name: Terraform apply
+      - name: Terraform apply/destroy
         working-directory: ./terraform
         run: terraform ${{ env.TERRAFORM_ACTION }} -auto-approve
 
@@ -39,11 +40,8 @@ jobs:
         if: env.TERRAFORM_ACTION == 'apply'
         working-directory: ./terraform
         run: |
-          EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
+          EC2_IP=$(terraform output -raw ec2_public_ip)
           echo "EC2_IP=$EC2_IP" >> $GITHUB_ENV
-
-    outputs:
-      ec2_public_ip: ${{ env.EC2_IP }}
 
   # -------------------------
   # Stage 2: Create ECR repo if needed
@@ -56,17 +54,14 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
         with:
-          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Check if ECR repository exists
+        id: check_repo
         run: |
-          repo_name=$(aws ecr describe-repositories \
-            --repository-names ${{ env.IMAGE_NAME }} \
-            --query "repositories[0].repositoryName" \
-            --output text 2>/dev/null || echo "")
-          repo_name=$(echo "$repo_name" | tr -d '\r\n')
+          repo_name=$(aws ecr describe-repositories --repository-names ${{ env.IMAGE_NAME }} 2>/dev/null || echo "")
           echo "repo_name=$repo_name" >> $GITHUB_ENV
 
       - name: Create ECR repository if not exists
@@ -76,11 +71,7 @@ jobs:
 
       - name: Get ECR URI
         run: |
-          ECR_URI=$(aws ecr describe-repositories \
-            --repository-names ${{ env.IMAGE_NAME }} \
-            --query "repositories[0].repositoryUri" \
-            --output text)
-          ECR_URI=$(echo "$ECR_URI" | tr -d '\r\n')
+          ECR_URI=$(aws ecr describe-repositories --repository-names ${{ env.IMAGE_NAME }} --query "repositories[0].repositoryUri" --output text)
           echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
 
   # -------------------------
@@ -103,7 +94,7 @@ jobs:
 
       - name: Login to Amazon ECR
         run: |
-          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_URI }}
+          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
 
       - name: Build, tag, and push Docker image
         run: |
@@ -114,14 +105,14 @@ jobs:
   # Stage 4: Deploy Docker to EC2
   # -------------------------
   deploy_to_ec2:
-    name: Deploy Docker Image to EC2
+    name: Deploy Docker on EC2
     runs-on: ubuntu-latest
-    needs: [deploy_aws_infrastructure, build_and_push_docker]
+    needs: build_and_push_docker
     steps:
-      - name: Deploy to EC2
+      - name: SSH and deploy
         uses: appleboy/ssh-action@v1.2.0
         with:
-          host: ${{ needs.deploy_aws_infrastructure.outputs.ec2_public_ip }}
+          host: ${{ needs.deploy_aws_infrastructure.outputs.EC2_IP }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
@@ -134,12 +125,14 @@ jobs:
             fi
 
             # Login to ECR
-            aws ecr get-login-password --region ${{ env.AWS_REGION }} | sudo docker login --username AWS --password-stdin ${{ env.ECR_URI }}
+            aws ecr get-login-password --region ${{ env.AWS_REGION }} | sudo docker login --username AWS --password-stdin ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
 
-            # Pull image from ECR
-            sudo docker pull ${{ env.ECR_URI }}:latest
+            # Pull latest image
+            sudo docker pull ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:latest
 
-            # Stop old container and run new one
+            # Stop old container if exists
             sudo docker stop flaskapp || true
             sudo docker rm flaskapp || true
-            sudo docker run -d -p 5000:5000 --name flaskapp ${{ env.ECR_URI }}:latest
+
+            # Run new container
+            sudo docker run -d -p 5000:5000 --name flaskapp ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:latest
