--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -9,7 +9,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_REGION: us-east-1
-  TERRAFORM_ACTION: destroy
+  TERRAFORM_ACTION: apply
   IMAGE_NAME: flaskapp
 
 jobs:
@@ -83,35 +83,29 @@ jobs:
           echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
 
   # -------------------------
-  # Stage 3: Build Docker and push
+  # Stage 3: Build and Push Docker Image (Improved)
   # -------------------------
   build_and_push_docker:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: create_ecr_repository
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1-node16
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
       - name: Login to Amazon ECR
-        run: |
-          aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
-          docker login --username AWS --password-stdin ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+        uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push Docker image
+      - name: Build Docker image
+        env:
+          IMAGE_NAME: ${{ env.IMAGE_NAME }}
+          IMAGE_TAG: latest
+          ECR_URI: ${{ env.ECR_URI }}
         run: |
           echo "Using ECR URI: $ECR_URI"
-          docker build -t "$ECR_URI:latest" .
-          docker push "$ECR_URI:latest"
-        env:
-          ECR_URI: ${{ env.ECR_URI }}
+          docker build -t "${IMAGE_NAME}:${IMAGE_TAG}" .
+          docker tag "${IMAGE_NAME}:${IMAGE_TAG}" "${ECR_URI}:${IMAGE_TAG}"
+          docker push "${ECR_URI}:${IMAGE_TAG}"
 
   # -------------------------
   # Stage 4: Deploy Docker to EC2
@@ -138,7 +132,7 @@ jobs:
 
             # Login to ECR
             aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
-            sudo docker login --username AWS --password-stdin ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+            sudo docker login --username AWS --password-stdin ${{ env.ECR_URI }}
 
             # Pull image from ECR
             sudo docker pull ${{ env.ECR_URI }}:latest
