--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -9,10 +9,9 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_REGION: us-east-1
-  TERRAFORM_ACTION: destroy
+  TERRAFORM_ACTION: apply   # change back to destroy when tearing down infra
   IMAGE_NAME: flaskapp
   IMAGE_TAG: latest
-  ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
 
 jobs:
   # -------------------------
@@ -55,7 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy_aws_infrastructure
     outputs:
-      ecr_uri: ${{ steps.get_ecr_uri.outputs.ecr_uri }}
+      ecr_uri: ${{ steps.set_ecr_uri.outputs.ecr_uri }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
@@ -64,28 +63,22 @@ jobs:
           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Check if ECR repository exists
-        id: check_ecr
+      - name: Ensure ECR repository exists
         run: |
-          repo_name=$(aws ecr describe-repositories \
-            --repository-names ${{ env.IMAGE_NAME }} \
-            --query "repositories[0].repositoryName" \
-            --output text 2>/dev/null || echo "")
-          echo "repo_name=$repo_name" >> $GITHUB_ENV
+          aws ecr describe-repositories --repository-names ${{ env.IMAGE_NAME }} >/dev/null 2>&1 || \
+          aws ecr create-repository --repository-name ${{ env.IMAGE_NAME }}
 
-      - name: Create ECR repository if not exists
-        if: env.repo_name == ''
-        run: aws ecr create-repository --repository-name ${{ env.IMAGE_NAME }}
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Get ECR URI
-        id: get_ecr_uri
+      - name: Set ECR URI
+        id: set_ecr_uri
         run: |
-          ECR_URI=$(aws ecr describe-repositories \
-            --repository-names ${{ env.IMAGE_NAME }} \
-            --query "repositories[0].repositoryUri" \
-            --output text | tr -d '\r\n ')
-          echo "::set-output name=ecr_uri::$ECR_URI"
+          ECR_URI="${{ steps.login-ecr.outputs.registry }}/${{ env.IMAGE_NAME }}"
           echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
+          echo "::set-output name=ecr_uri::$ECR_URI"
+          echo "✅ Using ECR URI: $ECR_URI"
 
   # -------------------------
   # Stage 3: Build and push Docker image
@@ -98,18 +91,16 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build Docker image
+      - name: Build and Push Docker image
         env:
-          IMAGE_NAME: ${{ env.IMAGE_NAME }}
-          IMAGE_TAG: ${{ env.IMAGE_TAG }}
           ECR_URI: ${{ needs.create_ecr_repository.outputs.ecr_uri }}
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: |
-          echo "Using ECR URI: $ECR_URI"
-          docker build -t "${IMAGE_NAME}:${IMAGE_TAG}" .
-          docker tag "${IMAGE_NAME}:${IMAGE_TAG}" "${ECR_URI}:${IMAGE_TAG}"
-          docker push "${ECR_URI}:${IMAGE_TAG}"
+          echo "🛠 Building image for $ECR_URI:$IMAGE_TAG"
+          docker build -t $ECR_URI:$IMAGE_TAG .
+          docker push $ECR_URI:$IMAGE_TAG
 
   # -------------------------
   # Stage 4: Deploy Docker to EC2
@@ -133,11 +124,13 @@ jobs:
               sudo systemctl enable docker
             fi
 
+            echo "🚀 Deploying image..."
+            ECR_URI="${{ needs.create_ecr_repository.outputs.ecr_uri }}"
+
             aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
-            sudo docker login --username AWS --password-stdin ${{ needs.create_ecr_repository.outputs.ecr_uri }}
+            sudo docker login --username AWS --password-stdin $ECR_URI
 
-            sudo docker pull ${{ needs.create_ecr_repository.outputs.ecr_uri }}:${{ env.IMAGE_TAG }}
-
+            sudo docker pull $ECR_URI:${{ env.IMAGE_TAG }}
             sudo docker stop flaskapp || true
             sudo docker rm flaskapp || true
-            sudo docker run -d -p 5000:5000 --name flaskapp ${{ needs.create_ecr_repository.outputs.ecr_uri }}:${{ env.IMAGE_TAG }}
+            sudo docker run -d -p 5000:5000 --name flaskapp $ECR_URI:${{ env.IMAGE_TAG }}
