--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -9,7 +9,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_REGION: us-east-1
-  TERRAFORM_ACTION: apply  # change to 'destroy' when tearing down infra
+  TERRAFORM_ACTION: destroy  # change to 'destroy' when tearing down infra
 
 jobs:
   # -------------------------
@@ -42,25 +42,19 @@ jobs:
         id: set_ec2_ip
         working-directory: ./terraform
         run: |
-          EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
-          echo "EC2_IP=$EC2_IP" >> $GITHUB_ENV
-          echo "::set-output name=ec2_public_ip::$EC2_IP"
+          echo "::set-output name=ec2_public_ip::$(terraform output -raw ec2_public_ip | tr -d '\r\n')"
 
       - name: Set image name output
         id: set_image_name
         working-directory: ./terraform
         run: |
-          IMAGE_NAME=$(terraform output -raw image_name | tr -d '\r\n')
-          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
-          echo "::set-output name=image_name::$IMAGE_NAME"
+          echo "::set-output name=image_name::$(terraform output -raw image_name | tr -d '\r\n')"
 
       - name: Set image tag output
         id: set_image_tag
         working-directory: ./terraform
         run: |
-          IMAGE_TAG=$(terraform output -raw image_tag | tr -d '\r\n')
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          echo "::set-output name=image_tag::$IMAGE_TAG"
+          echo "::set-output name=image_tag::$(terraform output -raw image_tag | tr -d '\r\n')"
 
   # -------------------------
   # Stage 2: Create ECR repo if needed
@@ -91,10 +85,7 @@ jobs:
       - name: Set ECR URI
         id: set_ecr_uri
         run: |
-          ECR_URI="${{ steps.login-ecr.outputs.registry }}/${{ needs.deploy_aws_infrastructure.outputs.image_name }}"
-          echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
-          echo "::set-output name=ecr_uri::$ECR_URI"
-          echo "✅ Using ECR URI: $ECR_URI"
+          echo "::set-output name=ecr_uri::${{ steps.login-ecr.outputs.registry }}/${{ needs.deploy_aws_infrastructure.outputs.image_name }}"
 
   # -------------------------
   # Stage 3: Build and push Docker image
@@ -140,7 +131,6 @@ jobs:
               sudo systemctl enable docker
             fi
 
-            echo "🚀 Deploying image..."
             ECR_URI="${{ needs.create_ecr_repository.outputs.ecr_uri }}"
             IMAGE_TAG="${{ needs.deploy_aws_infrastructure.outputs.image_tag }}"
 
