--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -9,7 +9,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_REGION: us-east-1
-  TERRAFORM_ACTION: destroy  # change to 'destroy' when tearing down infra
+  TERRAFORM_ACTION: apply # change to 'destroy' when tearing down infra
 
 jobs:
   # -------------------------
@@ -42,19 +42,23 @@ jobs:
         id: set_ec2_ip
         working-directory: ./terraform
         run: |
-          echo "::set-output name=ec2_public_ip::$(terraform output -raw ec2_public_ip | tr -d '\r\n')"
+          EC2_PUBLIC_IP_VALUE=$(terraform output -raw ec2_public_ip | grep -Eo "^[^:]+" | tail -n 1)
+          echo "EC2_PUBLIC_IP=$EC2_PUBLIC_IP_VALUE" >> $GITHUB_ENV
+         
 
       - name: Set image name output
         id: set_image_name
         working-directory: ./terraform
         run: |
-          echo "::set-output name=image_name::$(terraform output -raw image_name | tr -d '\r\n')"
+          IMAGE_NAME_VALUE=$(terraform output -raw image_name | grep -Eo "^[^:]+" | tail -n 1)
+           echo "IMAGE_NAME=$IMAGE_NAME_VALUE" >> $GITHUB_ENV
 
       - name: Set image tag output
         id: set_image_tag
         working-directory: ./terraform
         run: |
-          echo "::set-output name=image_tag::$(terraform output -raw image_tag | tr -d '\r\n')"
+          IMAGE_TAG_VALUE=$(terraform output -raw image_tag | grep -Eo "^[^:]+" | tail -n 1)
+           echo "IMAGE_TAG=$IMAGE_TAG_VALUE" >> $GITHUB_ENV
 
   # -------------------------
   # Stage 2: Create ECR repo if needed
@@ -63,8 +67,6 @@ jobs:
     name: Create ECR repository
     runs-on: ubuntu-latest
     needs: deploy_aws_infrastructure
-    outputs:
-      ecr_uri: ${{ steps.set_ecr_uri.outputs.ecr_uri }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
@@ -74,18 +76,23 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Ensure ECR repository exists
+        env:
+          IMAGE_NAME: ${{ needs.deploy_aws_infrastructure.outputs.image_name }}
         run: |
-          aws ecr describe-repositories --repository-names ${{ needs.deploy_aws_infrastructure.outputs.image_name }} >/dev/null 2>&1 || \
-          aws ecr create-repository --repository-name ${{ needs.deploy_aws_infrastructure.outputs.image_name }}
+          result=$(aws ecr describe-repositories --repository-names "${{ env.IMAGE_NAME }}" | jq -r '.repositories[0].repositoryName')
+          echo "repo_name=$result" >> $GITHUB_ENV
+        continue-on-error: true
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
+      - name: Create ECR repository if it does not exist
+        env:
+          IMAGE_NAME: ${{ needs.deploy_aws_infrastructure.outputs.image_name }}
+        if: env.repo_name != env.IMAGE_NAME
 
-      - name: Set ECR URI
-        id: set_ecr_uri
         run: |
-          echo "::set-output name=ecr_uri::${{ steps.login-ecr.outputs.registry }}/${{ needs.deploy_aws_infrastructure.outputs.image_name }}"
+           aws ecr create-repository --repository-name ${{ env.IMAGE_NAME }}
+
+
+      
 
   # -------------------------
   # Stage 3: Build and push Docker image
@@ -93,51 +100,91 @@ jobs:
   build_and_push_docker:
     name: Build and Push Docker image
     runs-on: ubuntu-latest
-    needs: create_ecr_repository
+    needs:
+      - deploy_aws_infrastructure
+      - create_ecr_repository
+    if: needs.deploy_aws_infrastructure.outputs.terraform_action != 'destroy'
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
+        uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build and Push Docker image
         env:
-          ECR_URI: ${{ needs.create_ecr_repository.outputs.ecr_uri }}
+          IMAGE_NAME: ${{ needs.deploy_aws_infrastructure.outputs.image_name }}
           IMAGE_TAG: ${{ needs.deploy_aws_infrastructure.outputs.image_tag }}
         run: |
-          echo "🛠 Building image for $ECR_URI:$IMAGE_TAG"
-          docker build -t $ECR_URI:$IMAGE_TAG .
-          docker push $ECR_URI:$IMAGE_TAG
+          docker build \
+             -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} .
 
+
+      - name: Retag Docker image
+        env:
+          IMAGE_NAME: ${{ needs.deploy_aws_infrastructure.outputs.image_name }}
+        run: |
+          docker tag ${{ env.IMAGE_NAME }} ${{ secrets.ECR_REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Push Docker Image to Amazon ECR
+        env:
+          IMAGE_NAME: ${{ needs.deploy_aws_infrastructure.outputs.image_name }}
+        run: |
+          docker push ${{ secrets.ECR_REGISTRY }}/${{ env.IMAGE_NAME }}
   # -------------------------
+  # Stage 4: Deploy Docker to EC2
+  # -------------------------
+    # -------------------------
   # Stage 4: Deploy Docker to EC2
   # -------------------------
   deploy_to_ec2:
     name: Deploy Docker Image to EC2
     runs-on: ubuntu-latest
-    needs: [deploy_aws_infrastructure, build_and_push_docker]
+    needs:
+      - deploy_aws_infrastructure
+      - create_ecr_repository
+      - build_and_push_docker
     steps:
-      - name: Deploy to EC2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1-node16
+        with:
+          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@v1.2.0
         with:
-          host: ${{ needs.deploy_aws_infrastructure.outputs.ec2_public_ip }}
+          host: ${{ env.EC2_PUBLIC_IP }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
+          envs: AWS_REGION,ECR_REGISTRY,IMAGE_NAME,IMAGE_TAG
           script: |
+            # Ensure Docker is installed and running
             if ! command -v docker &> /dev/null; then
+              echo "Installing Docker..."
               sudo apt-get update -y
               sudo apt-get install -y docker.io
               sudo systemctl start docker
               sudo systemctl enable docker
             fi
 
-            ECR_URI="${{ needs.create_ecr_repository.outputs.ecr_uri }}"
-            IMAGE_TAG="${{ needs.deploy_aws_infrastructure.outputs.image_tag }}"
+            # Login to ECR
+            echo "Logging into Amazon ECR..."
+            aws ecr get-login-password --region $AWS_REGION | \
+              sudo docker login --username AWS --password-stdin $ECR_REGISTRY
 
-            aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
-            sudo docker login --username AWS --password-stdin $ECR_URI
+            # Pull the latest image
+            echo "Pulling latest Docker image..."
+            sudo docker pull $ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG
 
-            sudo docker pull $ECR_URI:$IMAGE_TAG
-            sudo docker stop flaskapp || true
-            sudo docker rm flaskapp || true
-            sudo docker run -d -p 5000:5000 --name flaskapp $ECR_URI:$IMAGE_TAG
+            # Stop and remove existing container if any
+            echo "Stopping old container..."
+            sudo docker stop $IMAGE_NAME || true
+            sudo docker rm $IMAGE_NAME || true
+
+            # Run new container
+            echo "Running new container..."
+            sudo docker run -d -p 5000:5000 --name $IMAGE_NAME $ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+
+            echo "✅ Deployment complete!"
