--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -9,7 +9,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_REGION: us-east-1
-  TERRAFORM_ACTION: apply # change to 'destroy' when tearing down infra
+  TERRAFORM_ACTION: destroy # change to 'destroy' when tearing down infra
 
 jobs:
   # -------------------------
@@ -42,23 +42,22 @@ jobs:
         id: set_ec2_ip
         working-directory: ./terraform
         run: |
-          EC2_PUBLIC_IP_VALUE=$(terraform output -raw ec2_public_ip | grep -Eo "^[^:]+" | tail -n 1)
-          echo "EC2_PUBLIC_IP=$EC2_PUBLIC_IP_VALUE" >> $GITHUB_ENV
-         
+          EC2_PUBLIC_IP=$(terraform output -raw ec2_public_ip)
+          echo "::set-output name=ec2_public_ip::$EC2_PUBLIC_IP"
 
       - name: Set image name output
         id: set_image_name
         working-directory: ./terraform
         run: |
-          IMAGE_NAME_VALUE=$(terraform output -raw image_name | grep -Eo "^[^:]+" | tail -n 1)
-           echo "IMAGE_NAME=$IMAGE_NAME_VALUE" >> $GITHUB_ENV
+          IMAGE_NAME=$(terraform output -raw image_name)
+          echo "::set-output name=image_name::$IMAGE_NAME"
 
       - name: Set image tag output
         id: set_image_tag
         working-directory: ./terraform
         run: |
-          IMAGE_TAG_VALUE=$(terraform output -raw image_tag | grep -Eo "^[^:]+" | tail -n 1)
-           echo "IMAGE_TAG=$IMAGE_TAG_VALUE" >> $GITHUB_ENV
+          IMAGE_TAG=$(terraform output -raw image_tag)
+          echo "::set-output name=image_tag::$IMAGE_TAG"
 
   # -------------------------
   # Stage 2: Create ECR repo if needed
@@ -67,6 +66,8 @@ jobs:
     name: Create ECR repository
     runs-on: ubuntu-latest
     needs: deploy_aws_infrastructure
+    outputs:
+      ecr_uri: ${{ steps.set_ecr_uri.outputs.ecr_uri }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
@@ -79,20 +80,16 @@ jobs:
         env:
           IMAGE_NAME: ${{ needs.deploy_aws_infrastructure.outputs.image_name }}
         run: |
-          result=$(aws ecr describe-repositories --repository-names "${{ env.IMAGE_NAME }}" | jq -r '.repositories[0].repositoryName')
-          echo "repo_name=$result" >> $GITHUB_ENV
-        continue-on-error: true
+          aws ecr describe-repositories --repository-names "$IMAGE_NAME" >/dev/null 2>&1 || \
+          aws ecr create-repository --repository-name "$IMAGE_NAME"
 
-      - name: Create ECR repository if it does not exist
+      - name: Set ECR URI
+        id: set_ecr_uri
         env:
           IMAGE_NAME: ${{ needs.deploy_aws_infrastructure.outputs.image_name }}
-        if: env.repo_name != env.IMAGE_NAME
-
         run: |
-           aws ecr create-repository --repository-name ${{ env.IMAGE_NAME }}
-
-
-      
+          ECR_URI="${{ secrets.ECR_REGISTRY }}/$IMAGE_NAME"
+          echo "::set-output name=ecr_uri::$ECR_URI"
 
   # -------------------------
   # Stage 3: Build and push Docker image
@@ -105,37 +102,24 @@ jobs:
       - create_ecr_repository
     if: needs.deploy_aws_infrastructure.outputs.terraform_action != 'destroy'
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build and Push Docker image
-      
+      - name: Build Docker image
         run: |
           docker build -t ${{ needs.deploy_aws_infrastructure.outputs.image_name }}:${{ needs.deploy_aws_infrastructure.outputs.image_tag }} .
 
-
-        
-
-
-
-      - name: Retag Docker image
-        env:
-          IMAGE_NAME: ${{ needs.deploy_aws_infrastructure.outputs.image_name }}
+      - name: Tag Docker image for ECR
         run: |
-          docker tag ${{ env.IMAGE_NAME }} ${{ secrets.ECR_REGISTRY }}/${{ env.IMAGE_NAME }}
+          docker tag ${{ needs.deploy_aws_infrastructure.outputs.image_name }}:${{ needs.deploy_aws_infrastructure.outputs.image_tag }} ${{ needs.create_ecr_repository.outputs.ecr_uri }}:${{ needs.deploy_aws_infrastructure.outputs.image_tag }}
 
       - name: Push Docker Image to Amazon ECR
-        env:
-          IMAGE_NAME: ${{ needs.deploy_aws_infrastructure.outputs.image_name }}
         run: |
-          docker push ${{ secrets.ECR_REGISTRY }}/${{ env.IMAGE_NAME }}
+          docker push ${{ needs.create_ecr_repository.outputs.ecr_uri }}:${{ needs.deploy_aws_infrastructure.outputs.image_tag }}
+
   # -------------------------
-  # Stage 4: Deploy Docker to EC2
-  # -------------------------
-    # -------------------------
   # Stage 4: Deploy Docker to EC2
   # -------------------------
   deploy_to_ec2:
@@ -146,22 +130,13 @@ jobs:
       - create_ecr_repository
       - build_and_push_docker
     steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1-node16
-        with:
-          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
       - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@v1.2.0
         with:
-          host: ${{ env.EC2_PUBLIC_IP }}
+          host: ${{ needs.deploy_aws_infrastructure.outputs.ec2_public_ip }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
-          envs: AWS_REGION,ECR_REGISTRY,IMAGE_NAME,IMAGE_TAG
           script: |
-            # Ensure Docker is installed and running
             if ! command -v docker &> /dev/null; then
               echo "Installing Docker..."
               sudo apt-get update -y
@@ -170,22 +145,21 @@ jobs:
               sudo systemctl enable docker
             fi
 
-            # Login to ECR
-            echo "Logging into Amazon ECR..."
-            aws ecr get-login-password --region $AWS_REGION | \
-              sudo docker login --username AWS --password-stdin $ECR_REGISTRY
+            ECR_URI="${{ needs.create_ecr_repository.outputs.ecr_uri }}"
+            IMAGE_NAME="${{ needs.deploy_aws_infrastructure.outputs.image_name }}"
+            IMAGE_TAG="${{ needs.deploy_aws_infrastructure.outputs.image_tag }}"
 
-            # Pull the latest image
-            echo "Pulling latest Docker image..."
-            sudo docker pull $ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+            echo "Logging into ECR..."
+            aws ecr get-login-password --region ${{ env.AWS_REGION }} | sudo docker login --username AWS --password-stdin $ECR_URI
 
-            # Stop and remove existing container if any
-            echo "Stopping old container..."
+            echo "Pulling Docker image..."
+            sudo docker pull $ECR_URI:$IMAGE_TAG
+
+            echo "Stopping old container if exists..."
             sudo docker stop $IMAGE_NAME || true
             sudo docker rm $IMAGE_NAME || true
 
-            # Run new container
             echo "Running new container..."
-            sudo docker run -d -p 5000:5000 --name $IMAGE_NAME $ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+            sudo docker run -d -p 5000:5000 --name $IMAGE_NAME $ECR_URI:$IMAGE_TAG
 
             echo "✅ Deployment complete!"
